--- a/build_msvc/test_BGL/test_BGL.vcxproj
+++ b/build_msvc/test_BGL/test_BGL.vcxproj
@@ -19,7 +19,10 @@
     <ClCompile Include="..\..\src\wallet\test\util.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\libBGLconsensus\libBGLconsensus.vcxproj">
+    <ProjectReference Include="..\libminisketch\libminisketch.vcxproj">
+      <Project>{542007e3-be0d-4b0d-a6b0-aa8813e2558d}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\libBGL_consensus\libBGL_consensus.vcxproj">
       <Project>{2b384fa8-9ee1-4544-93cb-0d733c25e8ce}</Project>
     </ProjectReference>
     <ProjectReference Include="..\libBGL_cli\libBGL_cli.vcxproj">
