--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -72,10 +72,9 @@ base_template: &BASE_TEMPLATE
 global_task_template: &GLOBAL_TASK_TEMPLATE
   << : *BASE_TEMPLATE
   container:
-    image: ubuntu:focal
-    cpu: 1
-    # Gives us more CPUs for free if they're available.
-    greedy: true
+    # https://cirrus-ci.org/faq/#are-there-any-limits
+    # Each project has 16 CPU in total, assign 2 to each container, so that 8 tasks run in parallel
+    cpu: 2
     memory: 8G  # Set to 8GB to avoid OOM. https://cirrus-ci.org/guide/linux/#linux-containers
     dockerfile: ci/test_imagefile  # https://cirrus-ci.org/guide/docker-builder-vm/#dockerfile-as-a-ci-environment
   depends_built_cache:
@@ -123,13 +122,11 @@ task:
   name: 'tidy [lunar]'
   << : *GLOBAL_TASK_TEMPLATE
   container:
-    cpu: 2
+    cpu: 4
     memory: 5G
     docker_arguments:
       CI_IMAGE_NAME_TAG: ubuntu:lunar
       FILE_ENV: "./ci/test/00_setup_env_native_tidy.sh"
-  # For faster CI feedback, immediately schedule the linters
-  << : *CREDITS_TEMPLATE
   env:
     << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
 
@@ -252,7 +249,6 @@ task:
     docker_arguments:
       CI_IMAGE_NAME_TAG: ubuntu:lunar
       FILE_ENV: "./ci/test/00_setup_env_native_tsan.sh"
-  << : *CREDITS_TEMPLATE
   env:
     WRAPPER_CMD: qemu-ppc64le
     SECP256K1_TEST_ITERS: 16
@@ -425,7 +421,6 @@ task:
     docker_arguments:
       CI_IMAGE_NAME_TAG: ubuntu:jammy
       FILE_ENV: "./ci/test/00_setup_env_mac.sh"
-  << : *CREDITS_TEMPLATE
   macos_sdk_cache:
     folder: "depends/SDKs/$MACOS_SDK"
     fingerprint_key: "$MACOS_SDK"
